# reason-graphql-experiment

./: .dockerignore  .gitignore  .nowignore  Dockerfile  README.md  bsconfig.json  dune-project  graphql_schema.json  now.json  package.json  reason-graphql-experiment.install  server.json
config/: paths.js  webpack.config.dev.js  webpack.config.prod.js
public/: graphiql.html
scripts/: build.sh
server.esy.lock/: index.json
server.esy.lock/opam-override/conf-libev.4-11/: package.json
server.esy.lock/opam-override/ocplib-endian.1.0/: package.json
src/client/: app.module.scss  app.re  editor.re  index.css  index.re
src/server/: dune  httpaf_server.re  httpaf_utils.re  json_schema_generator.ml  main.re  proxy.re  router.ml  schema.re  server.re  subscription_manager.ml  subscription_manager.mli
src/shared/: Shared.re
